// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-gNZgCX bAVTuz aje-input__text sc-eiwqOE jsjjJD aje-input--default is-medium"
  >
    <label
      class="sc-FEMpB encIGH"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      Text Label
    </label>
    <p
      class="sc-gjcoXW dLoCuF is-auto"
      id="react-aria-:r3:"
    >
      message
    </p>
    <input
      aria-describedby="react-aria-:r3:"
      aria-labelledby="react-aria-:r1:"
      class="sc-fLDLck XprmO"
      id="react-aria-:r0:"
      placeholder="placeholder"
      tabindex="0"
      type="text"
      value="content"
    />
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-gNZgCX bAVTuz aje-input__text sc-eiwqOE jsjjJD aje-input--floating is-medium"
    data-float="true"
  >
    <div
      class="sc-gjXmFk eNqHck"
    >
      <input
        aria-describedby="react-aria-:r8:"
        aria-labelledby="react-aria-:r6:"
        class="sc-fLDLck XprmO"
        data-float="true"
        id="react-aria-:r5:"
        placeholder="placeholder"
        tabindex="0"
        type="text"
        value="content"
      />
      <label
        class="sc-FEMpB encIGH"
        for="react-aria-:r5:"
        id="react-aria-:r6:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-gjcoXW dLoCuF is-auto"
      id="react-aria-:r8:"
    >
      message
    </p>
  </div>
</DocumentFragment>
`;
